INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/xhsqlite3/include)
INCLUDE_DIRECTORIES(include)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Teach_Yourself_SQL/bin)

ADD_SUBDIRECTORY(chapter_2)
ADD_SUBDIRECTORY(chapter_3)
ADD_SUBDIRECTORY(chapter_4)
ADD_SUBDIRECTORY(chapter_5)
ADD_SUBDIRECTORY(chapter_6)
ADD_SUBDIRECTORY(chapter_7)